syntax = "proto3";

package netsvr.infoReq;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//business向worker请求，获取网关中的info
message InfoReq {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //目标uniqId
  string uniqId = 2;
}